<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_black"
        android:title="Home"/>

    <item android:title="@string/storyapp">
        <menu>
            <item
                android:id="@+id/random"
                android:icon="@drawable/ic_baseline_cached_24"
                android:title="@string/random_story"/>

            <item
                android:id="@+id/stories"
                android:icon="@drawable/ic_baseline_import_contacts_24"
                android:title="@string/stories"/>

            <item
                android:id="@+id/cat"
                android:icon="@drawable/ic_baseline_list_24"
                android:title="@string/categories"/>
        </menu>
    </item>

    <item android:title="@string/more">
        <menu>
            <item
                android:id="@+id/contact"
                android:icon="@drawable/ic_baseline_forum_24"
                android:title="@string/contact_us"/>

            <item
                android:id="@+id/rate"
                android:icon="@drawable/ic_baseline_star_rate_24"
                android:title="@string/rate_us"/>

        </menu>
    </item>
</menu>